# laserbeamsize

./: .gitignore  CHANGELOG.rst  CITATION.cff  MANIFEST.in  Makefile  README.rst  jupyter-lite.json  jupyter_lite_config.py  pyproject.toml  release.txt  requirements-dev.txt
.gh-pages/: .pages-ping
.github/scripts/: update_citation.py
.github/workflows/: citation.yaml  test.yaml
_site/laserbeamsize/api/contents/: all.json
docs/: 09-Razor-Blade.ipynb  10-Beam-Waist.ipynb  11-M2-Parameters.ipynb  12-M2-Theory.ipynb  13-M2-Experiment.ipynb  14-M2-Examples.ipynb  conf.py  index.rst
laserbeamsize/: __init__.py  analysis.py  background.py  display.py  image_tools.py  jupyter_lite_config.json  masks.py
tests/: test_fixed_phi.py  test_noise.py  test_tools.py
