[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["laserbeamsize"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "laserbeamsize.__version__"}

[project]
name = "laserbeamsize"
description = "ISO 11146 Calculation of Laser Beam Center, Diameter, and M²"
readme = "README.rst"
requires-python = ">=3.10"
keywords = [
    "variance",
    "gaussian",
    "M-squared",
    "d4sigma",
    "M2",
    "M²",
    "spotsize",
    "laser beam",
    "ISO11146",
    "divergence",
    "beam waist",
    "TEM00",
    "beam diameter",
    "beam parameter product",
    "BPP",
    "laser propagation",
    "beam profiling",
    "beam optics",
    "beam measurement",
    "laser metrology",
    "beam quality",
    "beam analysis",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
authors = [{name = "Scott Prahl", email = "scott.prahl@oit.edu"}]
license = "MIT"
dynamic = ["version"]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
]

[project.optional-dependencies]
docs = [
  "Sphinx==8.1.3",
  "nbsphinx==0.9.7",
  "sphinx_automodapi",
  "sphinx_rtd_theme",
]

dev = [
  # Testing
  "pytest",
  "imageio",
  "requests",

  # Lint / QA
  "ruff",
  "yamllint",
  "rstcheck",
  "pylint",
  "pyroma",
  "black[jupyter]",

  # Release / packaging checks
  "build",
  "check-manifest",
  "libarchive-c",
  "pyyaml",
  "setuptools",

  # Notebooks (local JupyterLab workflows)
  "jupyterlab",
  "nbconvert",
  "nbformat",
]

lite = [
  "jupyterlite-core==0.6.4",
  "jupyterlite-pyodide-kernel==0.6.1",
]

[project.urls]
Homepage = "https://github.com/scottprahl/laserbeamsize"
Documentation = "https://laserbeamsize.readthedocs.io"
Source = "https://github.com/scottprahl/laserbeamsize"
Tracker = "https://github.com/scottprahl/laserbeamsize/issues"
Changelog = "https://github.com/scottprahl/laserbeamsize/blob/main/docs/CHANGELOG.rst"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["D", "E", "F", "W"]
ignore = ["D212", "E402", "F403"]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D100", "D103"]   # ignore missing docstring in test files

[tool.check-manifest]
ignore = [
  ".gh-pages/**",
  ".lite_src/**",
  ".lite_root/**",
  "_site/**",
  "docs/**",
  ".readthedocs.yaml",
  ".yamllint",
  "jupyter_lite_config.json",
  "Makefile",
  "release.txt",
  "requirements-dev.txt",
  "todo",
]

[tool.pytest.ini_options]
markers = ["notebooks"]

[tool.pylint.messages_control]
disable = [
    "invalid-name",
    "line-too-long",
    "too-many-locals",
    "too-many-arguments",
    "too-many-positional-arguments",
    "consider-using-f-string",
    "too-many-statements",
    "duplicate-code",
    "C0114",
    "C0116",
]

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]
